@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2018/06/02 v219 : </lime>
+</p><br/>
+<p>
+    1. 你可以为弹出按钮指定按键，这些按钮仅当自身显示时绑定这些按键，当自身隐藏时会释放它们，所以，可以绑定例如1，2，3之类常用按钮给它们。
+</p>
+<p>
+    2. 如果一个根按钮没有内容，那么点击或者使用按键定义它，会显示它的弹出按钮，以便选择使用。
+</p>
+<br/><br/>
+<p>
 <lime>2018/02/02 v217 : </lime>
 </p><br/>
 <p>
