@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2018/06/02 v219 : </lime>
+</p><br/>
+<p>
+    1. 妳可以為彈出按鈕指定按鍵，這些按鈕僅當自身顯示時綁定這些按鍵，當自身隱藏時會釋放它們，所以，可以綁定例如1，2，3之類常用按鈕給它們。
+</p>
+<p>
+    2. 如果壹個根按鈕沒有內容，那麽點擊或者使用按鍵定義它，會顯示它的彈出按鈕，以便選擇使用。
+</p>
+<br/><br/>
+<p>
 <lime>2018/02/02 v217 : </lime>
 </p><br/>
 <p>
